attempt to fix flicker

--- a/resources/assets/css/spacexstats/layout/_nav.scss
+++ b/resources/assets/css/spacexstats/layout/_nav.scss
@@ -114,11 +114,12 @@ nav.sticky-bar {
     max-width:1400px;
     font-size:14px;
     @include transitionMed((background-color, color));
+    -webkit-backface-visibility: hidden;
+    
 
     &.sticky {
         background-color:$blue;
         color:$white;
-        z-index:1000;
     }
 }
 
